fixed stretched oil brand logos in mobile
only fixed in chrome, unsure if other devices are affected

--- a/src/sass/modules/_modules.scss
+++ b/src/sass/modules/_modules.scss
@@ -140,7 +140,7 @@
             .logo-wrapper {
                 width: 100%;
                 height: 100%;
-                min-height: 135px;
+                min-height: 100px;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
@@ -148,23 +148,24 @@
                 
                 a {
                     height: 100%;
+                    width:100%;
                     display: flex;
                     flex-direction: column;
                     align-items: center;
                     justify-content: center;
                        
                     .bostock-logo {
-                        max-width: 75%;
+                        max-width: 90%;
+
                     }
 
                     .aozora-logo {
-                        max-width: 60%;
-                        margin: 10px;
+                        max-width: 80%;
                     } 
                 }
 
                 img {
-                    max-height: 150px;
+                    min-height: 80px;
                 }
             }
             
